9 activate user (#10)
9 use case Activate user
